<resources>
    <string name="app_name">Gank.IO</string>

    <string name="action_by_category">Scan by Category</string>
    <string name="action_by_calendar">Scan by Calendar</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Setting</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_copy_url">Copy url</string>
    <string name="action_open_url">Open url</string>
    <string name="action_save_image">Save Image</string>
    <string name="action_submit">Submit</string>

    <string-array name="gank_types" translatable="false">
        <item>Android</item>
        <item>iOS</item>
        <item>休息视频</item>
        <item>福利</item>
        <item>拓展资源</item>
        <item>前端</item>
        <item>瞎推荐</item>
        <item>App</item>
    </string-array>

    <string name="alert_too_early">这一天 Gank 还没出生呢^_^</string>
    <string name="alert_too_late">未来的这一天我们会相遇的！</string>

    <string name="alert_fetching">Fetching~</string>

    <string name="alert_submit">Submitting…</string>
    <string name="alert_submit_success">老大, 所有提交数据一切正常!</string>
    <string name="alert_submit_error">Ops！有点问题，快检查一下～</string>
    <string name="alert_submit_desc_too_short">Desc is too short!</string>
    <string name="alert_submit_url_empty">Url is empty!</string>
    <string name="alert_submit_url_error">Url error! Must start with http/https!</string>

    <string name="alert_save_image">Saving to Gallery?</string>
    <string name="alert_request_write_external_storage">We need the Permission to save Images!</string>

    <string name="hint_search">在 Gank 搜一下</string>
    <string name="hint_url">干货 URL 地址</string>
    <string name="hint_desc">干货简要描述</string>

    <string name="good_gank_title">优秀干货的定义：</string>
    <string name="good_gank_content">\n
        · 功能专一，文档完备，国际化\n
        · 能加速开发的开源库或者框架\n
        · 新颖技术架构的完整 App 项目\n
        · 原创，深入浅出的文章（非简单入门）\n
        · 激发灵感的展示性项目
    </string>
    <string name="label_submit_type">Type:</string>
    <string name="label_submit_who">Submitter:</string>
    <string name="hint_submit_who">Your name, or github id</string>

    <string name="alert_open_url_failed">No application hold this action</string>

    <string name="leak_canary_display_activity_label" translatable="false">Gank Leaks</string>

</resources>
