<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="0"
        android:icon="@drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/action_by_calendar"
        android:title="@string/action_by_calendar"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_setting"
        android:title="@string/action_setting"
        android:orderInCategory="3"
        android:icon="@android:drawable/stat_sys_warning"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="4"
        android:icon="@android:drawable/stat_sys_warning"
        app:showAsAction="never"/>

</menu>